# rust-semp

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.org  small07  three07
.github/workflows/: test.yml
scripts/: run_qffs.py  time.awk  trim_params.py
src/: config.rs  driver.rs  dump.rs  lib.rs  local.rs  main.rs  mopac.rs  optimize.rs  params.rs  queue.rs  slurm.rs  stats.rs  tests.rs  utils.rs
src/config/: raw.rs
src/optimize/: energy.rs  frequency.rs
src/optimize/frequency/: tests.rs
src/params/: dftbplus.rs  molpro.rs  mopac.rs
src/params/snapshots/: rust_semp__params__dftbplus__tests__config.snap  rust_semp__params__dftbplus__tests__display.snap  rust_semp__params__dftbplus__tests__from_file.snap  rust_semp__params__dftbplus__tests__skf_trailing_junk.snap
src/snapshots/: rust_semp__tests__write_submit_script.snap
test_files/: broyden.jac  cactus.jac  cart.toml  dftb.toml  file07  freq.jac  github.jac  go.lhs  jac.toml  levmar.jac  molpro.params  noaux.aux  norm.toml  part.toml  pbqff.toml  quarter07  small.jac  small.params  spectro.in  symm  test.toml  three.jac  unavail.out
