[package]
name = "rust-semp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.126"
nalgebra = "0.31.1"
psqs = { path = "/home/brent/Projects/psqs" }
rayon = "1.5.3"
rust-pbqff = { path = "/home/brent/Projects/rust-pbqff" }
serde = { version = "1.0", features = ["derive"] }
symm = { path = "/home/brent/Projects/symm" }
taylor = { path = "/home/brent/Projects/taylor" }
toml = "0.5.8"

[dev-dependencies]
approx = "0.5.1"

[[bin]]
name = "one_iter"

[[bin]]
name = "num_jac"
