[package]
name = "rust-semp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.154"
nalgebra = "0.33.0"
psqs = { git = "https://github.com/ntBre/psqs" }
intder = { git = "https://github.com/ntBre/intder" }
rayon = "1.8.1"
pbqff = { git = "https://github.com/ntBre/pbqff" }
# rust-pbqff = { path = "../rust-pbqff" }
serde = { version = "1.0", features = ["derive"] }
symm = { git = "https://github.com/ntBre/symm" }
taylor = { git = "https://github.com/ntBre/taylor" }
toml = "0.8.10"

[dev-dependencies]
approx = "0.5.1"

[[bin]]
name = "one_iter"

[[bin]]
name = "num_jac"
